PID motor speed with live graph plot

--- a/Rail_System_Encoder_Touch_Interface/.cproject
+++ b/Rail_System_Encoder_Touch_Interface/.cproject
@@ -162,15 +162,15 @@
 							</tool>
 						</toolChain>
 					</folderInfo>
-					<fileInfo id="fr.ac6.managedbuild.config.gnu.cross.exe.debug.715715595.1936291306" name="Slider_Menu_GUI.cpp" rcbsApplicability="disable" resourcePath="src/Slider_Menu_GUI.cpp" toolsToInvoke="fr.ac6.managedbuild.tool.gnu.cross.cpp.compiler.1035493358.997549911">
-						<tool id="fr.ac6.managedbuild.tool.gnu.cross.cpp.compiler.1035493358.997549911" name="MCU G++ Compiler" superClass="fr.ac6.managedbuild.tool.gnu.cross.cpp.compiler.1035493358"/>
+					<fileInfo id="fr.ac6.managedbuild.config.gnu.cross.exe.debug.715715595.1966504843" name="Live_Graph.cpp" rcbsApplicability="disable" resourcePath="src/Live_Graph.cpp" toolsToInvoke="fr.ac6.managedbuild.tool.gnu.cross.cpp.compiler.1035493358.918769131">
+						<tool id="fr.ac6.managedbuild.tool.gnu.cross.cpp.compiler.1035493358.918769131" name="MCU G++ Compiler" superClass="fr.ac6.managedbuild.tool.gnu.cross.cpp.compiler.1035493358"/>
 					</fileInfo>
 					<sourceEntries>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="HAL_Driver"/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Middlewares"/>
 						<entry excluding="Fonts" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Utilities"/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="inc"/>
-						<entry excluding="Slider_Menu_GUI.cpp|GUI_Interface.cpp|Live_Graph.cpp|WM_Interface.cpp" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="src"/>
+						<entry excluding="Live_Graph.cpp|Rail SystemDLG.cpp|Slider_Menu_GUI.cpp|GUI_Interface.cpp|WM_Interface.cpp" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="src"/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="startup"/>
 					</sourceEntries>
 				</configuration>
